src/objects/Apttus_Config2__IncentiveAdjustmentItem__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__AdjustmentDate__c</fullName>
        <description>The adjustment date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The adjustment date</inlineHelpText>
        <label>Adjustment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The adjustment description</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The adjustment description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveCode__c</fullName>
        <description>The incentive code available to customers to identify the incentive</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The incentive code available to customers to identify the incentive</inlineHelpText>
        <label>Incentive Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>